# try.c-

./: .gitignore
.github/workflows/: run_test_aw1.yaml  run_test_cw1.yaml  run_test_hw1.yaml  run_test_hw2.yaml  run_test_hw3.yaml  run_test_hw4.yaml  run_test_hw5.yaml  run_test_hw6.yaml
lectures/lecture-cmake/: .gitignore  CMakeLists.txt  Makefile  README.md  info.md  libs.md
lectures/lecture-cmake/src/: parser.cpp  parser.h  solution.cpp  solver.cpp  solver.h
lectures/lecture1/: .gitignore  Makefile  README.md  lecture1.ipynb  main.cpp  square.cpp  square.h
lectures/lecture2/: .gitignore  02.memory.md  CMakeLists.txt  README.md  example.CMakeLists.txt  lecture2.ipynb  sum500.c  sum500.cpp
lectures/lecture3-4/: .gitignore  CMakeLists.txt  Makefile  README.md  lecture3.ipynb  lecture4.ipynb  matrix.cpp  mem.cpp  task_args.cpp
lectures/lecture5/: lecture5.ipynb
lectures/lecture6/: README.md  lecture6.ipynb
lectures/lecture6/fixed_size_stack/: CMakeLists.txt  README.md  fixed_size_stack.hpp  fixed_size_stack_sol.hpp  tests.cpp
lectures/lecture7/: .gitignore  Makefile  lambda.cpp  lecture7.1.ipynb  lecture7.2.ipynb
lectures/lecture7/ReaderWriterTask/: README.md  fileReader.cpp  fileWritter.cpp
open-class/: .gitignore  CMakeLists.txt  Makefile  class.ipynb  main.cpp  main_template.cpp  plot.py
tasks/task1/: CMakeLists.txt  README.md  list.cpp  list.h  list_internal.cpp  main.cpp
tasks/task1/tests/: test_list.cpp
tasks/task2/: CMakeLists.txt  Makefile  README.md  main.cpp  matrix.cpp  matrix.h
tasks/task2/tests/: test_main.cpp  test_matrix.cpp
